# SAR-QualityQT

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  analysis_clarity.cpp  analysis_glcm.cpp  analysis_infocontent.cpp  analysis_radiometric.cpp  analysis_snr.cpp  imagehandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mingw-w64-toolchain.cmake  vcpkg.json
data/: GF3_KAS_UFS_023164_E105.5_N37.4_20210102_L1A_DH_L10005365624intensity.tiff  LC08_L1TP_127035_20200425_20200509_01_T1_B2.TIF
docs/: ANALYSIS_CONFIG.md
i18n/: SAR-QualityQT_en.ts  SAR-QualityQT_zh_CN.ts
resources/: sar_quality.qrc
src/: CMakeLists.txt  analysis_clarity.cpp  analysis_glcm.cpp  analysis_infocontent.cpp  analysis_radiometric.cpp  analysis_snr.cpp  imagehandler.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow.xml
src/core/: CMakeLists.txt  imagefilters.cpp  imagefilters.h  imagehandler.cpp  imagehandler.h  logger.cpp
src/core/analysis/: CMakeLists.txt  aasr.cpp  aasr.h  analysis.h  analysis_base.cpp  analysis_base.h  analysis_clarity.cpp  analysis_config.cpp  analysis_config.h  analysis_controller.cpp  analysis_factory.cpp  analysis_factory.h  analysis_functions.cpp  analysis_global.cpp  analysis_result.cpp  analysis_utils.cpp  analysis_utils.h  azimuth_resolution.cpp  azimuth_resolution.h  clarity.cpp  clarity.h  glcm.cpp  glcm.h  global.cpp  global.h  infocontent.cpp  infocontent.h  islr.cpp  islr.h  local.cpp  local.h  nesz.cpp  nesz.h  pslr.cpp  pslr.h  radiometric.cpp  radiometric.h  range_resolution.cpp  range_resolution.h  rasr.cpp  (+5 more)
src/core/include/: analysis_controller.h  analysis_result.h  analysis_result_item.h  imagehandler.h  logger.h
src/include/: analysis_utils.h  mainwindow.h
src/ui/: CMakeLists.txt  analysis_controller.cpp  analysis_controller.h  drag_drop_handler.cpp  drag_drop_handler.h  filter_settings_dialog.cpp  image_handler.cpp  image_handler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.xml  report_generator.cpp  report_generator.h  setup.ui  threshold_settings_dialog.cpp  ui_setup.cpp
src/ui/include/: drag_drop_graphics_view.h  filter_settings_dialog.h  mainwindow.h  report_generator.h  threshold_settings_dialog.h
tests/: CMakeLists.txt  analysis_tests.cpp  core_tests.cpp  test_utils.h
